<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                style="@style/TitleFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/action_update_internet" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/primaryDarkColor">
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/text_internet_update_help"/>
            <Button
                android:id="@+id/buttonInternetUpdate"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:background="@color/primaryDarkColor"
                android:text="@string/button_update"/>


            <TextView
                android:id="@+id/textView2"
                style="@style/TitleFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/action_update_sdcard" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/primaryDarkColor">
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/text_sdcard_update_help"/>
            <Button
                android:id="@+id/buttonSDCardUpdate"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:background="@color/primaryDarkColor"
                android:text="@string/button_update"/>

            <TextView
                android:id="@+id/textView3"
                style="@style/TitleFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/action_cleanup" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/primaryDarkColor">
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/text_cleanup_help"/>
            <Spinner
                android:id="@+id/cleanUpSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>
            <Button
                android:id="@+id/buttonCleanUp"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:layout_marginBottom="20dp"
                android:background="@color/primaryDarkColor"
                android:text="@string/button_cleanup"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>