<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

	<TextView
		style="@style/TitleGrayFont"
		android:id="@+id/internetUpdate4TextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginTop="10dp"
		android:text="@string/text_internet_update_4"/>

    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >
    
	    <TextView
	        style="@style/TitleFont"
	        android:id="@+id/internetUpdate1TextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/text_internet_update_1" />
	    
        <TextView
            style="@style/TitleGrayFont"
            android:id="@+id/internetUpdate2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/text_internet_update_2" />	    

    </LinearLayout>
    
    <TextView
        style="@style/InfoFont"
        android:id="@+id/internetUpdate3TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/text_internet_update_3"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp" />    
    
</LinearLayout>
