<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/filterLayout"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/primaryColor"
	android:orientation="vertical"
	android:paddingHorizontal="20dp"
	android:paddingBottom="20dp"
	android:visibility="gone">

	<EditText
		android:id="@+id/filterText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/filter_title_text_hint"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="right">

		<Button
			android:id="@+id/cleanButton"
			android:layout_width="160dp"
			android:layout_height="36dp"
			android:layout_marginTop="10dp"
			android:layout_marginRight="10dp"
			android:background="@color/primaryDarkColor"
			android:text="@string/filter_button_clean"/>

		<Button
			android:id="@+id/applyButton"
			android:layout_width="160dp"
			android:layout_height="36dp"
			android:layout_marginTop="10dp"
			android:background="@color/primaryDarkColor"
			android:text="@string/filter_button_apply"/>

	</LinearLayout>


</LinearLayout>
