<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/fragment_announce_filter"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/announcesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:divider="@android:color/background_light"
            android:dividerHeight="10dp"
            android:visibility="visible">

        </ListView>

        <RelativeLayout
            android:id="@+id/noAnnouncesLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/noAnnouncesImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/warning_icon" />

            <TextView
                android:id="@+id/noAnnouncesTextView"
                style="@style/WarningFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noAnnouncesImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/text_no_announces_found"
                android:visibility="visible" />

            <Button
                android:id="@+id/noAnnouncesFilterButton"
                android:layout_width="180dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/noAnnouncesTextView"
                android:layout_centerHorizontal="true"
                android:background="@color/primaryDarkColor"
                android:text="@string/button_modify_filter" />

            <Button
                android:id="@+id/noAnnouncesUpdateButton"
                android:layout_width="180dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/noAnnouncesFilterButton"
                android:layout_centerHorizontal="true"
                android:background="@color/primaryDarkColor"
                android:text="@string/button_update_data" />


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
